# parrot-rcc

./: .gitignore  LICENSE  Makefile  README.md  default.nix  docker-compose.yml  docker-postgres-init.sh  flake.nix  pyproject.toml  shell.nix
.github/workflows/: cachix.yml
docker-hasura/metadata/databases/: databases.yaml
docker-hasura/metadata/databases/zeebe_monitor/tables/: public_element_instance.yaml  public_incident.yaml  public_job.yaml  public_message_subscription.yaml  public_process.yaml  public_process_instance.yaml  public_process_resource.yaml  public_timer.yaml  public_variable.yaml  public_variable_value.yaml  tables.yaml
docker-hasura/metadata/databases/zeebe_tasklist/tables/: tables.yaml
docker-hasura/migrations/zeebe_monitor/1663182457128_init/: up.sql
nix/: default.nix  sources.json
nix/pkgs/poetry2nix/nix/: sources.json
nix/pkgs/zbctl/: default.nix
pkgs/rcc/: default.nix  rcc.nix
src/parrot_rcc/: adapter.py  cli.py  errors.py  healthz.py  s3.py  types.py  utils.py
