[tool.poetry]
name = "parrot-rcc"
version = "0.1.0"
description = "Zeebe external task Robot Framework RCC client"
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
license = "BSD-3"

[tool.poetry.scripts]
parrot-rcc = 'parrot_rcc.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyzeebe = "^3.0.4"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
