[tool.poetry]
name = "parrot-rcc"
version = "0.1.2"
description = "Zeebe external task Robot Framework RCC client"
authors = ["Asko Soukka <asko.soukka@iki.fi>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/datakurre/parrot-rcc"
repository = "https://github.com/datakurre/parrot-rcc"
documentation = "https://github.com/datakurre/parrot-rcc"

[tool.poetry.scripts]
parrot-rcc = 'parrot_rcc.cli:main'

[tool.poetry.dependencies]
python = "^3.9"
pyzeebe = "^3.0.4"
click = "^8.1.3"
PyYAML = "^6.0"
boto3 = "^1.26.22"
file-magic = "^0.4.1"
Pillow = "^9.3.0"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
from_first = true
line_length = 200
lines_after_imports = 2
lines_between_types = 0
no_sections = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
